--- a/Day4 Task1.html
+++ b/Day4 Task1.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript - Day -4: Functions</title>
 </head>
 <body>
     <h1>Hello Guvi My First Web</h1>
-    <h2>Day4 Task1</h2>
+    <h2>Day4 Task1 <br> Compare Two JSON with same properties </h2>
     <h2>By ...Boobathi Thillan...</h2>
     <script>
     let details1 = {name:"Person1",age:5}
