--- a/Day4 Task2 .html
+++ b/Day4 Task2 .html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Guvi JS Day 3</title>
+        <title>JavaScript - Day -4: Functions</title>
     </head>
     <body>
         <h1>Hello Guvi My First Web</h1>
-        <h2>Day4 Task2</h2>
+        <h2>Day4 Task2 - Display all country flags</h2>
         <h2>By ...Boobathi Thillan...</h2>
         <script>
             console.log("Welcome to HTML JS")
