--- a/Day4 Task1.html
+++ b/Day4 Task1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript - Day -4: Functions</title>
+    <title>JavaScript - Day -4: Array & Objects</title>
 </head>
 <body>
     <h1>Hello Guvi My First Web</h1>
