--- a/Day4 Task3.html
+++ b/Day4 Task3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>JavaScript - Day -4: Functions</title>
+        <title>JavaScript -Day -3 : JS array & objects</title>
     </head>
     <body>
         <h1>Hello Guvi My First Web</h1>
