--- a/Day4 Task1.html
+++ b/Day4 Task1.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript -Day -3 : JS array & objects</title>
+    <title>Task 3</title>
 </head>
 <body>
-    <h1>Hello Guvi My First Web</h1>
-    <h2>Day4 Task1 <br> Compare Two JSON with same properties </h2>
+    <h1>Hello Guvi</h1>
+    <h2>Day3 Task1 <br> Compare Two JSON with same properties </h2>
     <h2>By ...Boobathi Thillan...</h2>
+    
+    <h3>Sample Input</h3>
+    <pre>
+         <h3>
+            let details1 = {name:"Person1",age:5}
+
+            let details2 = {age:5,name:"Person1"}
+        </h3>
+    </pre>
+
+    <h3>Sample Output</h3>
+    <pre>
+         <h3>
+            Equall
+        </h3>
+    </pre>
     <script>
     let details1 = {name:"Person1",age:5}
     let details2 = {age:5,name:"Person1"}
