Update Day4 Task2 .html

--- a/Day4 Task2 .html
+++ b/Day4 Task2 .html
@@ -4,9 +4,11 @@
         <title>Dat 3 - Task 2</title>
     </head>
     <body>
-        <h1>Hello Guvi My First Web</h1>
-        <h2>Day4 Task2 - Display all country flags</h2>
+        <h1>Hello Guvi</h1>
+        <h2>Day4 Task2 - Use the rest countries API URL -> https://restcountries.com/v3.1/all and  Display all country flags</h2>
         <h2>By ...Boobathi Thillan...</h2>
+        
+        
         <script>
             console.log("Welcome to HTML JS")
 
